app/assets/stylesheets/govt_official.css.scss
// Place all the styles related to the govtOfficial controller here.
// They will automatically be included in application.css.
// You can use Sass (SCSS) here: http://sass-lang.com/

.personalInfo{
    width: 30%;
    height: 100%;
    float: left;
}

.legislativeInfo{
    width: 100%;
    height: 100%;
}

.header{
    padding-top: 30px;
    h3, h4{
        padding-right: 20px;
        display: inline;
    }
}

// **This needs to be changed into something else....
// alignment is not correct
.electionYear{
    width: 800px;
}

.currentYear{
    background: #3ee059;
    color: #fff;
}
.laterYear{
    background: #db2929;
    color: #fff;
}   


.memberCard{
    float: left;
    margin-right: 30px;
    width: 250px;
    
    .memberImage{
        width: 250px;
        height: 350px;
    }
    .memberInfo{
        text-align: left;
        box-sizing: border-box;
        float: left;

        ul{
            margin: 0;
            border-style: solid;
            border-width: 0.5px;
            width: 250px;
            background: #d0d3d8;
        }
    }
    #compareButton{
        width: 250px;
    }
}

.memberStats{
    display: block;
    .memberStatsIntro{
        padding-top: 15px;
        margin-bottom: 15%;
    }
}




.horizontalList{
    list-style-type: none;
        li{
            display: inline-block; 
            margin-right: 120px;
        }
    .stat{
        font-size: 42px;
        font-family: "Times New Roman";
        color: #4599e8;
    }
}

.memberStatsRecent{
    .recentHeading{
        font-size: 30px;
        font-weight: bold;
        font-family: "Times New Roman";
    }
    
    .filter{
        line-height: 30px;
        height: 40px;
        color: #8694aa;
        border-top: 0.5px solid;
        border-bottom: 0.5px solid;
    }
    
    .plus{
        li{
            margin-right: 200px;    
        }
        display: inline-block;
        margin-left: 230px;
        // overflow: scroll;
    }
}


.activityList{
    list-style-type: none;
    .listChildren{
        border-bottom: 0.5px solid #B9CED6;
    }
    .date{
        font-size: 15px;
        font-weight: bold;
    }
    .description{
        font-style: italic;
        color: #6e84a3;
    }
    
    .yes, .passed{
        color: #2add3f;
        font-style: italic;
        font-weight: bold;
    }
    
    .no, .failed{
        color: #db4818;
        font-style: italic;
        font-weight: bold;
    }
}

@mixin recentBtn{
    background: blue;
    display: inline;
    height: 10px;
    width: 10px;
    border-radius: 50%;
    border: 1px solid red;
}

// **Color change here should probably just be handled by javascript...

// svg#statment:hover{
//     background-color: #3ca88d;
// }
// svg#bills:hover{
//     background-color: #e4e876;
// }
// svg#votes:hover{
//     background-color: #9ce552;
// }
// svg#twitter:hover{
//     background-color: #7fc9e2;    
// }

// #statements:before{
//     @include recentBtn;
//     "#3ca88d"
// }
// #bills:before{
//     @include recentBtn;
// }
// #votes:before{
//     @include recentBtn; 
// }
// #twitter:before{
//     @include recentBtn;
// }

